# senvy

./: Cargo.toml  Dockerfile  Makefile  README.md  http_endpoint_tests.json
cli/: .gitignore  Cargo.toml
cli/src/: args_structure.rs  command_handlers.rs  config.rs  main.rs  utils.rs
endpoint-tests/: http_delete.json  http_read.json
senvy_common/: Cargo.toml
senvy_common/src/: types.rs
server/: Cargo.toml  Makefile
server/endpoint-tests/: http_create.json  http_delete.json  http_exists.json  http_read.json  http_update.json
server/src/: files.rs  handlers.rs  main.rs
server/src/queue/: mod.rs  queue.rs  task.rs
src/: files.rs  handlers.rs  main.rs  project_entry.rs  types.rs
