[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
reqwest = "0.11.14"
serde = "1.0.152"
serde_json = "1.0.93"
senvy = { path = "../server" }
serde_derive = "1.0.152"
tokio = { version = "1.25.0", features = ["full"] }
url = "2.3.1"
