[package]
name = "senvy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.0"
anyhow = "1.0.69"
env_logger = "0.10.0"
log = "0.4.17"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.92"
senvy_common = { path = "../senvy_common"}
tokio = { version = "1.25.0", features = ["rt", "rt-multi-thread"] }
num_cpus = "1.15.0"
